<resources>
    <string name="app_name">Olympia</string>
    <string name="search_term">Search Term</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="get_key">Get key</string>
    <string name="signin">Sign in</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="new_password">New password</string>
    <string name="email">Email (will be private by default)</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>

    <string name="tab1_label">Vocabulary</string>
    <string name="tab2_label">Categories</string>
    <string name="tab3_label">Quizzes</string>

    <!--Menu-->
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_legal">Terms of use</string>
    <string name="menu_item_about">About</string>

    <string name="logo_descr">Olympia logo</string>

    <!--Alert dialogs-->
    <string name="create_category">Create category</string>
    <string name="rename_category">Rename category</string>
    <string name="select_category">Select category(-ies)</string>

    <!--Categories-->
    <string name="category_name">Category name</string>
    <string name="create">Create</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>

    <string name="deleting_category_title">Deleting a category</string>
    <string name="deleting_category_descr">Are you sure you want to delete this category? It will be removed from all the words it is mapped to. The words will not be affected.</string>

    <!--Toast messages-->
    <string name="registration_field_invalid">None of the fields can be empty. Username must be unique and have at least %d characters. Email must contain @. Password must be of at least %d characters. Passwords must match</string>
    <string name="login_field_invalid">Username and password cannot be empty. Username must be unique and have at least %d characters. Password must be of at least %d characters</string>
    <string name="reset_password_field_invalid">Email must contain @. Password must be of at least %d characters. Passwords must match</string>
    <string name="category_exists">Category already exists</string>
    <string name="category_needs_name">Please, enter the name for the category</string>
    <string name="enter_search_word">Please, enter the word to search</string>
    <string name="change_name_field_invalid">First name, last name and password cannot be empty. Password must be of at least %d characters</string>
    <string name="change_email_field_invalid">Email must contain @. Password must be of at least %d characters</string>
    <string name="change_password_error">All passwords must be of at least %d characters. New password must be repeated. Old password and new password cannot be the same</string>
    <string name="tts_no_lang">No language selected</string>
    <string name="tts_missing_data">Missing language data</string>
    <string name="tts_not_supported">Language not supported</string>
    <string name="tts_set_to">TTS language set to: %s</string>

    <!--Word card-->
    <string name="word_card_categories">Categories:\u00A0</string>

    <!--Operations on words list-->
    <string name="sort">Sort</string>
    <string name="sort_ascending">A-Z</string>
    <string name="sort_descending">Z-A</string>
    <string name="sort_newer_first">Newer first</string>
    <string name="sort_older_first">Older first</string>
    <string name="filter">Filter</string>
    <string name="filter_by">Filter by category(-ies)</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied to clipboard</string>
    <string name="not_copied">Nothing to copy</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>

    <!--Settings page-->
    <string name="database_label">Operations with database:</string>
    <string name="database_save">Save</string>
    <string name="database_saved">Current state of words and categories was saved to database</string>
    <string name="database_restore">Restore</string>
    <string name="database_restored">Previous state of words and categories was restored from database</string>
    <string name="database_clear">Clear</string>
    <string name="database_cleared">All the records purged from database</string>
    <string name="account_label">Account operations:</string>
    <string name="account_change_names">Change name and surname</string>
    <string name="account_change_name">Change name</string>
    <string name="account_change_email">Change email</string>
    <string name="account_change_password">Change password</string>
    <string name="account_logout">Logout</string>
    <string name="account_delete">Delete account</string>
    <string name="font_size_label">Change font size</string>

    <string name="new_first_name">New first name</string>
    <string name="new_last_name">New last name</string>
    <string name="current_password">Current password</string>
    <string name="new_email">New email</string>
    <string name="set_new_password">Set new password</string>

    <string name="deleting_account_title">Deleting account</string>
    <string name="deleting_account_descr">Are you sure you want to delete your account? This action is irreversible! Input your password to proceed:</string>

    <!--Errors handling-->
    <string name="no_such_word">There is no such word in the dictionary</string>
    <string name="account_change_names_success">User\'s first name and last name were changed to %s %s</string>
    <string name="account_change_email_success">User\'s email was changed to %s</string>
    <string name="account_change_password_success">User\'s password was successfully changed</string>
    <string name="error_server_unreachable">Server unreachable</string>
    <string name="error_failed_attempt">Unable to submit %s request to the server</string>
    <string name="error_key_expired">Your key has expired</string>

    <!--Quizzes-->
    <string name="quiz_description">Quiz is a self-checking tool in which you are given a definition of the word and must spell it correctly. Answer correctly and get higher score!</string>
    <string name="start_quiz">Start the quiz</string>
    <string name="quiz_select_categories">Select category(-ies)</string>
    <string name="next">Next</string>
    <string name="your_answer">Your answer here</string>
    <string name="quiz_list_is_empty">Cannot start a quiz with an empty list of words</string>
    <string name="quiz_node_not_found">ERROR: definition not found!</string>

    <!--Statistics-->
    <string name="statistics_title">Statistics</string>
    <string name="open_statistics">Go to quizzes statistics</string>
    <string name="last_score">Last score:</string>
    <string name="overall_score">Overall score:</string>

    <!--UI-->
    <string name="ui_title">UI settings</string>
    <string name="change_ui_lang">Change UI language</string>
    <string name="select_lang">Select language</string>
    <string name="lang_en">English</string>
    <string name="lang_ru">Русский</string>
    <string name="lang_hi">Hindi</string>
    <string name="change_dict_lang">Change dictionary language</string>
    <string name="dict_lang_en">English</string>
    <string name="dict_lang_es">Español</string>
    <string name="dict_lang_hi">Hindi</string>
    <string name="change_theme">Change theme</string>
    <string name="select_theme">Select theme</string>
    <string name="theme_1">Theme 1</string>
    <string name="theme_2">Theme 2</string>
    <string name="theme_3">Contrast 1</string>
    <string name="theme_4">Contrast 2</string>

    <!--Legal-->
    <string name="legal_descr">Using this app you agree to our terms and conditions as well as rules regarding privacy.</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="termsAndConditions">Terms and conditions</string>

    <!--About-->
    <string name="version">Version v0.04</string>
    <string name="about_descr">Olympia is an Android dictionary app created as a Capstone Project in Mobile Solutions development Program. It allows not only use Oxford dictionary, but also manipulate words in different ways and make quizzes of them for self-check.</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_email">olympia8225@gmail.com</string>
    <string name="feedback_title">Feedback on Olympia app</string>
    <string name="send_email">Send email</string>

    <!--OCR-->
    <string name="no_data_file">OCR engine not ready</string>

    <!--HowTo-->
    <string name="howto_title">How to use</string>
    <string name="ok">OK</string>
    <string name="line10">Welcome to Olympia!</string>
    <string name="line20">There are three tabs for Words, Categories and Quizzes:</string>
    <string name="img20">Illustration of tabs</string>
    <string name="line30">To search a word in the dictionary simply enter it in the search field and then hit the search button.</string>
    <string name="line40">A word card for one of previously met words can be opened by tapping on it:</string>
    <string name="img40">Illustration how to tap</string>
    <string name="line50">To put a word in any of the categories touch and hold on the word:</string>
    <string name="img50">Illustration how to press and hold</string>
    <string name="line60">If you wish to remove the word from the list simply swipe it to the left or right:</string>
    <string name="img60">Illustration how to swipe</string>
    <string name="line70">To rename a category hold on it:</string>
    <string name="img70">Illustration how to rename a category</string>
    <string name="line80">Remove unnecessary category by swiping it to the left or right:</string>
    <string name="img80">Illustration how to remove a category</string>

    <!--No Internet-->
    <string name="no_internet_title">No connection</string>
    <string name="no_internet_descr">Application cannot work without access to the Internet. Please make sure you are connected.</string>
    <string name="open_settings">Open settings</string>
</resources>
